tests/snapshots/parse_file__redefinition_ctr_with_fun.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/redefinition_ctr_with_fun.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/parse_file/redefinition_ctr_with_fun.bend[0m[1m :[0m
Redefinition of builtin (constructor) 'String/Cons'.
Location: end of input
[0m  1 | [4m[31mdef String/Cons(x):
[0m  2 | [4m[31m  return x
[0m
