tests/snapshots/parse_file__redefinition_fun_imp.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/redefinition_fun_imp.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/parse_file/redefinition_fun_imp.bend[0m[1m :[0m
Redefinition of function 'A'.
[0m  3 | [4m[31mdef A:
[0m  4 | [4m[31m  return 0[0m
