tests/snapshots/parse_file__redefinition_type_with_object.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/redefinition_type_with_object.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/parse_file/redefinition_type_with_object.bend :
Redefinition of builtin (type) 'IO'.
[0m  1 | [4m[31mobject IO { run }
[0m
