tests/snapshots/parse_file__redefinition_with_object_between.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/redefinition_with_object_between.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/parse_file/redefinition_with_object_between.bend :
Redefinition of function 'A'
[0m  3 | [4m[31mA = 1[0m
