tests/snapshots/parse_file__repeated_adt_name.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/repeated_adt_name.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/parse_file/repeated_adt_name.bend :
Repeated datatype 'Foo'
[0m  2 | [4m[31mdata Foo = B
[0m  3 | [4m[31m
[0m  4 | [4m[31m[0mmain = *[0m
