tests/snapshots/parse_file__repeated_adt_name.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/repeated_adt_name.hvm
---
Repeated datatype 'Foo'
