tests/snapshots/parse_file__repeated_datatype_name.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/repeated_datatype_name.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/parse_file/repeated_datatype_name.bend :
Found a repeated field 'Expr' in constructor Expr/Plus.
[0m  3 |   | [4m[31m(Plus Expr Expr)[0m
